--- a/physical_env/mc/mc_types/default.yaml
+++ b/physical_env/mc/mc_types/default.yaml
@@ -1,5 +1,6 @@
 # MobileCharger specifications
 "capacity" : 108000
+#"capacity" : 20000
 "threshold" : 0
 "velocity" : 5
 "pm" : 1
@@ -7,4 +8,5 @@
 "alpha" : 4500
 "beta" : 30
 "epsilon" : 0.0000000001
+"e": 1
 
