--- a/physical_env/mc/mc_types/default.yaml
+++ b/physical_env/mc/mc_types/default.yaml
@@ -4,8 +4,9 @@
 "velocity" : 5
 "pm" : 1
 "charging_range" : 300
-"alpha" : 4500
+"alpha" : 9000
 "beta" : 30
 "epsilon" : 0.0000000001
 "e": 1
+"eps_double_q": 0.01
 
